Reconfigure tests params. Adding logs for tests.